<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NextEp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">&lt;</string>
    <string name="add">+</string>
    <string name="show_title_default">show_title</string>
    <string name="thumbnail">thumbnail</string>
    <string name="next_episode">Next episode:</string>
    <string name="next_episode_default">00x00</string>
    <string name="airs_on">Airs:</string>
    <string name="airdate_default">Today @ 00:00am</string>

</resources>