<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <ImageView android:id="@+id/imgIcon"
        android:contentDescription="@string/show_title_default"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/show_icon_default" />

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:id="@+id/txtTitle"
	        android:layout_width="fill_parent"
	        android:layout_height="0px"
	        android:layout_weight="1"
	        android:layout_marginBottom="5dp"
	        android:layout_marginTop="5dp"
	        android:gravity="center_vertical"
	        android:hint="@string/show_title_default"
	        android:textColor="#000000"
	        android:textSize="22sp"
	        android:textStyle="bold" />
	    
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="0px"
	        android:layout_weight="1"
		    android:orientation="horizontal" >
	    
		    <TextView
		        android:id="@+id/txtNextEpisodeLabel"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:layout_marginBottom="5dp"
		        android:layout_marginTop="5dp"
		        android:layout_marginRight="8dp"
		        android:gravity="center_vertical"
		        android:hint="@string/next_episode"
		        android:textColor="#000000"
		        android:textSize="16sp"
		        android:textStyle="normal" />
		    
		    <TextView
		        android:id="@+id/txtNextEpisode"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:layout_marginBottom="5dp"
		        android:layout_marginTop="5dp"
		        android:gravity="center_vertical"
		        android:hint="@string/next_episode_default"
		        android:textColor="#000000"
		        android:textSize="16sp"
		        android:textStyle="normal" />
		    
	    </LinearLayout>
	    
	    
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="0px"
	        android:layout_weight="1"
		    android:orientation="horizontal" >
	    
		    <TextView
		        android:id="@+id/txtNextAirdateLabel"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:layout_marginBottom="5dp"
		        android:layout_marginTop="5dp"
		        android:layout_marginRight="8dp"
		        android:gravity="center_vertical"
		        android:hint="@string/airs_on"
		        android:textColor="#000000"
		        android:textSize="16sp"
		        android:textStyle="normal" />
		    
		    <TextView
		        android:id="@+id/txtNextAirdate"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:layout_marginBottom="5dp"
		        android:layout_marginTop="5dp"
		        android:gravity="center_vertical"
		        android:hint="@string/airdate_default"
		        android:textColor="#000000"
		        android:textSize="16sp"
		        android:textStyle="normal" />
		    
	    </LinearLayout>
	    
    </LinearLayout>
    
	<Button
        android:id="@+id/btnWatched"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:gravity="center_vertical"
        android:onClick="TODO"
        android:text="TODO" />

</LinearLayout>